--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auth_buttons: ^2.0.4
+  cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.10
   cloud_functions: ^3.2.9
   crypto: ^3.0.1
@@ -41,6 +42,7 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   get_it: ^7.2.0
   google_sign_in: ^5.2.4
+  http: ^0.13.4
   intl: ^0.17.0
   logger: ^1.1.0
   provider: ^6.0.2
