--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.17.0
   logger: ^1.1.0
   provider: ^6.0.2
+  shared_preferences: ^2.0.13
   sign_in_with_apple: ^3.3.0
   stacked_services: ^0.8.17
   table_calendar: ^3.0.4
