--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,12 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   get_it: ^7.2.0
   google_sign_in: ^5.2.4
+  html: ^0.15.0
   http: ^0.13.4
   intl: ^0.17.0
   logger: ^1.1.0
   provider: ^6.0.2
+  readmore: ^2.1.0
   shared_preferences: ^2.0.13
   sign_in_with_apple: ^3.3.0
   stacked_services: ^0.8.17
