--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   logger: ^1.1.0
   provider: ^6.0.2
   readmore: ^2.1.0
+  rxdart: ^0.27.3
   shared_preferences: ^2.0.13
   sign_in_with_apple: ^3.3.0
   sqlbrite: ^2.2.0
