--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -57,6 +57,8 @@ dependencies:
   stacked_services: ^0.8.17
   unicons: ^2.1.0
   universal_io: ^2.0.4
+  material_color_utilities: null
+  dynamic_color: ^1.4.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
